--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
         {% endblock %}
     </head>
     <body>
+        <img src="{{ asset('images/starshop-logo.png') }}" alt="Starshop logo" />
         {% block body %}{% endblock %}
     </body>
 </html>
